# visao-por-computador

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  a.out  build.sh  hsv.c  image.h  imagem-gray.pbm  imagem-rgb.pbm  main.c  main.cpp  makefile  run.sh  temp.c  test  vc.h  white.pbm
.cache/clangd/index/: Analyser.cpp.824CEFA7F45F25F2.idx  Analyser.hpp.68F621874350AA26.idx  ColorDetector.cpp.D2E82068ECF2530B.idx  ColorDetector.hpp.36E7981493AF5877.idx  ShapeDetector.cpp.F98C2D05F2ACB181.idx  ShapeDetector.hpp.CD08FC3EB115A44D.idx  cv.cpp.75F22A0D86548889.idx  main.cpp.9012014FBBC6483C.idx
.github/workflows/: cmake.yml
CodigoExemplo/: CodigoExemplo.c
Imagem/: .clang-format  CMakeLists.txt  image.h  main.c  test
VC-TP/: CodigoExemplo.cpp
aulas/: cv.cpp
include/: Analyser.hpp  ColorDetector.hpp  ShapeDetector.hpp
old/: a.out  imagem2.pbm  main.c  vc.c
src/: Analyser.cpp  ColorDetector.cpp  ShapeDetector.cpp  main.cpp
